--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "devDependencies": {
     "tape": "~2.3.2",
-    "vinyl": "~0.2.1"
+    "vinyl": "~0.2.1",
+    "uglify-js": "~2.4.12",
+    "gulp": "~3.5.2"
   },
   "scripts": {
     "test": "node test"
